--- a/code/index.html
+++ b/code/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel = "stylesheet" type = "text/css" href = "main.css" />
     <link rel = "stylesheet" type = "text/css" href = "bootstrap/css/bootstrap.min.css" />
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <link href="main.js">
     <title>Document</title>
 </head>
@@ -19,7 +20,9 @@
     <div class="container">
            
         <img class="image2" src="assests/MoodEye Logo.png" > 
-        <img class="image2" src="assests/2x/arrow.png" >   
+        <a href="#heading"><span class="material-icons md-48">
+            keyboard_arrow_down
+            </span> </a>  
         <div class="content">
             <p>
                 Say Hello to<br>
@@ -27,7 +30,7 @@
             </p>
         </div> 
         <div class="paragraph">
-            <h3>Problem Statement</h3>
+          <a name="heading"> <h3>Problem Statement</h3></a> 
             <p>
                 In this era of the digital age, information has become more accessible to us than ever before. We live in a world where there is an endless supply of content, generated to meet the<br> ever growing need for it. <br><br> However, the longer we spend on our screen the more we blur the boundaries between what is excessive and what is common place. We are growing accustomed to information <br>overloads; that inevitably take a toll on our mental health. This is especially prevalent in the case of information that could trigger a user, such as world news, fringe content, etc.<br><br>Therefore, a pressing need of the hour is to provide users with a means of consuming their information in a regulated and mindful manner.
             </p><br><br>
