--- a/code/index.html
+++ b/code/index.html
@@ -51,7 +51,9 @@ This forces the user to temporarily disconnect and separate themselves from the 
  Once activated, it will keep track of a user's facial expressions for the duration of their browsing session. A predefined threshold has been set for each emotion. Once that threshold has been crossed, an overlay  window will cover the screen for a period of 10 minutes. This serves as a digital time-out for the user.<br>
 <br>
  This forces the user to temporarily disconnect and separate themselves from the content they were consuming at the time, thereby reducing the likelihood of them falling into an information "rabbit-hole".<br>
-      <br><span class="text">Test The Model</span>
+      <br><span class="text"><span class="material-icons">
+        play_circle_filled
+        </span> Test The Model</span>
             </p>
             <p class="para2">Output Screenshot for the model used </p>
             <br><br><br>
