--- a/code/index.html
+++ b/code/index.html
@@ -20,7 +20,7 @@
     <div class="container">
            
         <img class="image2" src="assests/MoodEye Logo.png" > 
-        <a href="#heading"><span class="material-icons md-48">
+        <a href="#heading"><span class="material-icons md-100 icons">
             keyboard_arrow_down
             </span> </a>  
         <div class="content">
@@ -51,7 +51,7 @@ This forces the user to temporarily disconnect and separate themselves from the 
  Once activated, it will keep track of a user's facial expressions for the duration of their browsing session. A predefined threshold has been set for each emotion. Once that threshold has been crossed, an overlay  window will cover the screen for a period of 10 minutes. This serves as a digital time-out for the user.<br>
 <br>
  This forces the user to temporarily disconnect and separate themselves from the content they were consuming at the time, thereby reducing the likelihood of them falling into an information "rabbit-hole".<br>
-      <br><span class="text"><span class="material-icons">
+      <br><span class="text"><span class="material-icons md-18">
         play_circle_filled
         </span> Test The Model</span>
             </p>
@@ -59,7 +59,7 @@ This forces the user to temporarily disconnect and separate themselves from the 
             <br><br><br>
             <br>
             <div><span class="statement">Well, what are you waiting for? Start using MoodEye and become a mindful consumer.</span>   
-               <button class=" ">Demo MoodEye</button>
+               <a href="#"><button class=" ">Demo MoodEye</button></a>
             </div> 
         </div> 
      
